    ADDED - new DATAOUTPUTFILE allows collected data to be written to a file for later use (automatically on in Cacti)
    ADDED - new wmdata: datasource plugin can read data from files produced by DATAOUTPUTFILE
    ADDED - AICONFILLCOLOR accepts 'none'
    ADDED - Editor 'tidy link' function replaces Vert & Horiz, and does much nicer job

0.97c - No code changes apart from path fixes, and ZIP file fixes.

0.97c has no additional changes - it's just 0.97b with some silly errors fixed, and  all
the CSS files included with the correct paths. There were also reports of problems with the
actual zip file.

0.97b is a special release starting from 0.97a and backporting all the quick bugfixes from the 0.98 code. 
There are larger structural changes in 0.98 and new features, but these bugfixes were useful enough to
warrant a new 0.97 release (especially the mysql schema change). A real 0.98 release will follow in
due course.

Also late addition to 0.97b - a couple of security analysts have pointed out flaws in the editor.
First, the ability to remotely create .php files and then cross-site-scripting vulnerabilities. Both
are really facets of the same thing - lack of input validation. 0.97b improves this a great deal.

Thanks to Gerry Eisenhaur and Daniel Ricardo dos Santos respectively for their security bug reports.

0.97b   FIXED - absolute SCALE definitions didn't support K (thanks wwwdrich)
    FIXED - memory leak in poller code. Memory usage is MUCH lower now.
    FIXED - updated mysql schema commands to use modern ENGINE instead of TYPE;
    FIXED - static datasource plugin honours KILO
    FIXED - check-gdbug.php shouldn't complain about empty ob_flush buffers anymore
    FIXED - SNMP DS should deal better with non-numeric (and blank) return values
    FIXED - NINK colours were exchanged (thanks Deathwing00!)
    FIXED - WriteConfig (i.e. editor) won't 'lose' absolute keyword from 
    FIXED - fixed some function-name clashes with other plugins